--- a/src/graphics.h.in
+++ b/src/graphics.h.in
@@ -3154,6 +3154,9 @@ public:
   public:
     void remove_child (const graphics_handle& h);
 
+    Matrix get_boundingbox (bool internal = false,
+                            const Matrix& parent_pix_size = Matrix ()) const;
+
     // See the genprops.awk script for an explanation of the
     // properties declarations.
 
