doc: Add Colin Macdonald and Mike Miller to contributors.in

--- a/doc/interpreter/contributors.in
+++ b/doc/interpreter/contributors.in
@@ -152,6 +152,7 @@ Emil Lucretiu
 Hoxide Ma
 James Macnicol
 Jens-Uwe Mager
+Colin Macdonald
 Rob Mahurin
 Ricardo Marranita
 Orestes Mas
@@ -164,6 +165,7 @@ Christoph Mayer
 Júlio Hoffimann Mendes
 Thorsten Meyer
 Petr Mikulik
+Mike Miller
 Stefan Monnier
 Antoine Moreau
 Kai P. Mueller
