Add configure check for isnan in fortran.
* libcruft/slatec-fn/erfc.in.f: Rename from erfc.f.
* libcruft/slatec-fn/derfc.in.f: Rename from derfc.f.
* libcruft/slatec-fn/module.mk (slatec-fn/derfc.f, slatec-fn/erfc.f):
New targets and rules.
* m4/acinclude.m4 (OCTAVE_CHECK_FORTRAN_HAVE_ISNAN): New macro.
* configure.ac: Use it.  Substitute F77_ISNAN_MACRO.
* build-aux/common.mk (F77_ISNAN_MACRO): New variable.

--- a/configure.ac
+++ b/configure.ac
@@ -593,6 +593,14 @@ if test -z "$F77"; then
   AC_MSG_ERROR([in order to build octave, you must have a compatible Fortran compiler or wrapper script for f2c that functions as a Fortran compiler installed and in your path.  See the file INSTALL for more information.])
 fi
 
+OCTAVE_CHECK_FORTRAN_HAVE_ISNAN
+F77_ISNAN_MACRO=
+if test "x$octave_cv_fortran_have_isnan" = xno; then
+   AC_MSG_NOTICE([substituting ISNAN(X) with X.NE.X in fortran sources])
+   F77_ISNAN_MACRO="s|ISNAN(\(@<:@^)@:>@*\))|(\1.NE.\1)|"
+fi
+AC_SUBST(F77_ISNAN_MACRO)
+
 OCTAVE_CHECK_FORTRAN_INTEGER_SIZE
 if test "x$octave_cv_fortran_integer_size" = xno; then
   if $USE_64_BIT_IDX_T; then
