Clean generated fortran files.
* libcruft/Makefile.am (nodist_libcruft_la_SOURCES): New variable.
(DISTCLEANFILES): Include $(nodist_libcruft_la_SOURCES) in the list.
* libcruft/slatec-fn/module.mk (nodist_libcruft_la_SOURCES):
Append derfc.f and erfc.f here.
(libcruft_la_SOURCES): Not here.

--- a/libcruft/Makefile.am
+++ b/libcruft/Makefile.am
@@ -31,6 +31,8 @@ octlib_LTLIBRARIES = libcruft.la
 
 libcruft_la_SOURCES =
 
+nodist_libcruft_la_SOURCES =
+
 libcruft_la_FFLAGS = $(F77_INTEGER_8_FLAG)
 
 libcruft_la_CPPFLAGS = \
@@ -98,5 +100,5 @@ ranlib.def: $(libranlib_la_SOURCES) mkf77def
 
 EXTRA_DIST += mkf77def.in
 
-DISTCLEANFILES = cruft.def ranlib.def
+DISTCLEANFILES = cruft.def ranlib.def $(nodist_libcruft_la_SOURCES)
 
