build: Distribute macros.texi in tarball so documentation will build.
* interpreter/Makefile.am: Add macros.texi to EXTRA_DIST variable.

--- a/doc/interpreter/Makefile.am
+++ b/doc/interpreter/Makefile.am
@@ -245,6 +245,7 @@ EXTRA_DIST = \
   images \
   images.awk \
   images.mk \
+  macros.texi \
   mk_doc_cache.m \
   mkcontrib.awk \
   munge-texi.pl \
