build: Enable Autotools 'distcheck' target to complete successfully.
* Makefile.am: Add built file 'ChangeLog' to list of files to delete
during distclean.

--- a/Makefile.am
+++ b/Makefile.am
@@ -86,7 +86,9 @@ INFO_FILES = \
 
 CLEANFILES = $(BUILT_SOURCES)
 
-DISTCLEANFILES = .gdbinit 
+DISTCLEANFILES = \
+  .gdbinit \
+  ChangeLog
 
 MAINTAINERCLEANFILES = $(BUILT_DISTFILES)
 
