Allow the builtin function mkdir to create missing parent directories
* bootstrap.conf : Add the mkdir-p and savewd gnulib modules.
* file-ops.cc (static int make_ancestor (const char*, const char*, void*)):
New function.
(int octave_mkdir (const std::string&, mode_t, std::string&, bool): Add fourth
argument and use it to conditionally select whether to make the missing
parent directories.
* file-ops.h (int octave_mkdir (const std::string&, mode_t, std::string&, bool):
Add fourth argument.
* lo-cutils.c (struct mkdir_options): New structure
(static void announce_mkdir (const char*, void*),
static int process_dir (char *, struct savewd *, void *),
int octave_mkdir_parents (const char *, mode_t, int (*make_ancestor)
(const char *, const char *, void *)): New functions.
* lo-cutils.h (int octave_mkdir_parents (const char *, mode_t, int
(*make_ancestor) (const char *, const char *, void *)): New function.
* dirfns.cc (Fmkdir): Call octave_mkdir with the make_parents argument set
to true.

--- a/build-aux/bootstrap.conf
+++ b/build-aux/bootstrap.conf
@@ -40,6 +40,7 @@ gnulib_modules="
   link
   lstat
   mkdir
+  mkdir-p
   mkfifo
   mkostemp
   mkstemp
@@ -56,6 +57,7 @@ gnulib_modules="
   rmdir
   round
   roundf
+  savewd
   sigaction
   signal
   sigprocmask
