--- a/configure.ac
+++ b/configure.ac
@@ -650,6 +650,7 @@ AC_SUBST(F77_FLOAT_STORE_FLAG)
 
 OCTAVE_IEEE754_DATA_FORMAT
 
+OCTAVE_CXX_BITWISE_OP_TEMPLATES
 OCTAVE_CXX_COMPLEX_SETTERS
 OCTAVE_CXX_COMPLEX_REFERENCE_ACCESSORS
 
