Detect Carbon's CGDisplayBitsPerPixel during configure. Use it if present. Provide a replacement if it is not.
* m4/acinclude.m4 (OCTAVE_CARBON_CGDISPLAYBITSPERPIXEL): New macro.
* configure.ac: Use it.
* display.cc: Define DisplayBitsPerPixel, and use it if CGDisplayBitsPerPixel
is missing.

--- a/configure.ac
+++ b/configure.ac
@@ -654,6 +654,8 @@ OCTAVE_CXX_BITWISE_OP_TEMPLATES
 OCTAVE_CXX_COMPLEX_SETTERS
 OCTAVE_CXX_COMPLEX_REFERENCE_ACCESSORS
 
+OCTAVE_CARBON_CGDISPLAYBITSPERPIXEL
+
 ### Check for the QHull library
 
 OCTAVE_CHECK_LIBRARY(qhull, QHull,
